# YOLO_training

./: .gitignore  Pipfile  README.md  augs_wrusing.txt  codigo_para_teste.py  efeitos_pixelLevel_albumentations.md  efeitos_spatialLevel_albumentations.md  hyper_yolo.yaml  ideias.txt  recallVSprecision.md  teste.py  testesbb.py  testing_class.ipynb  tutorial_yolo_hyps.md
Classification_YOLO_trainer/YOLO_Classification_trainer/: pyproject.toml
Classification_YOLO_trainer/YOLO_Classification_trainer/yolo_classification_trainer/: YOLO_class.py
YOLO_tools/: Pipfile  augment-yolo.ipynb  datasetyaml.txt  emissoes-fugitivas.db  opt-yolo.py  opt_ray_yolo.py  teste.ipynb  teste.py  teste_class.py  testing_class.ipynb  training-yolo.ipynb  training_yolo.py
YOLO_tools/PPE_CAPACETE/: classes.txt  notes.json  obj.names  train.txt
YOLO_tools/datasets/emissoes_YOLO/: classes.txt  dataset.yaml  notes.json
YOLO_tools/datasets/emissoes_YOLO/labels/: train.cache  val.cache
YOLO_tools/emissoes_dataset_COCO/annotations/: instances_default.json
YOLO_tools/old_scripts/: teste_class.py
YOLO_tools/source/: class_yolo_trainer.py
YOLO_tools/source/modules/: augmentations.py  model_predict.py  opt_yolo.py  slicing_dataset.py  training_YOLO_model.py  yolo_dataloader.py
YOLO_tools/utils/: check_file.py  concat.py  cvat_dataset.py  func_augment_yolo.py  func_rayTune_tuner.py  func_tune_yolo_rayTune.py  remover_labels_vazios.py  torch_is_available.py
dataset_for_training/: pyproject.toml
dataset_for_training/dataset_for_training/: class_yolo_trainer.py
emissoes_dataset_CVAT/: obj.names  train.txt
old_scripts/: yolo_classify.py
