[tool.poetry]
name = "dataset-for-training"
version = "0.1.0"
description = ""
authors = ["senra.judson <judsonnascimento.filho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.0"
ultralytics = "^8.0.215"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
