[tool.poetry]
name = "dataset-for-training"
version = "0.1.0"
description = ""
authors = ["senra.judson <judsonnascimento.filho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.0"
ultralytics = "^8.0.215"
poethepoet = "^0.24.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
cuda11 = "pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121"


####"pip install torch torchaudio torchvision -f https://download.pytorch.org/whl/cu111/torch_stable.html"

###"pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"

###pip install torch>1.10.0+cu115 torchvision>0.11.1+cu115 torchaudio>0.10.0+cu115 -f https://download.pytorch.org/whl/cu115/torch_stable.html