[tool.poetry]
name = "yolo-classification-trainer"
version = "0.1.0"
description = ""
authors = ["Rodrigo Silva <rodrigo.92.srb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
